force-app/main/default/objects/Defect_Link__c/Defect_Link__c.object-meta.xml
<CustomObject>
    <description>The junction object linking defects to component version where the defect was found and where it was fixed.</description>
    <label>Defect Link</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Defect Link No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defect Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>