force-app/main/default/objects/Defect_Link__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Defective Component</inlineHelpText>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defect_Links</relationshipName>
    <type>Lookup</type>
</CustomField>