force-app/main/default/objects/Defect_Link__c/fields/Defect__c.field-meta.xml
<CustomField>
    <fullName>Defect__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The defect to link to the version where it was found and the version where it was fixed.</description>
    <label>Defect</label>
    <referenceTo>Defect__c</referenceTo>
    <relationshipLabel>Defect Links</relationshipLabel>
    <relationshipName>Defect_Links1</relationshipName>
    <type>Lookup</type>
</CustomField>