force-app/main/default/objects/Defect_Link__c/fields/Defect_Status__c.field-meta.xml
<CustomField>
    <fullName>Defect_Status__c</fullName>
    <description>Formula field pulling the value from the Status field on the Defect object.</description>
    <formula>TEXT( Defect__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defect Status</label>
    <type>Text</type>
</CustomField>