force-app/main/default/objects/Defect_Link__c/fields/Env__c.field-meta.xml
<CustomField>
    <fullName>Env__c</fullName>
    <description>Pulls the value from the Env. field from the fixed Component Version</description>
    <formula>Version_Fixed__r.Environment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the highest environment that the fixed Component Version has advanced to</inlineHelpText>
    <label>Env.</label>
    <type>Text</type>
</CustomField>