force-app/main/default/objects/Defect_Link__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <formula>Defect__r.Short_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Description</label>
    <type>Text</type>
</CustomField>