force-app/main/default/objects/Defect_Link__c/fields/Version_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Version_Fixed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The component version where the linked defect was fixed.</description>
    <inlineHelpText>The component version where the linked defect was fixed.</inlineHelpText>
    <label>Version Fixed</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a Component Version for the Component listed on the Defect Link.</errorMessage>
        <filterItems>
            <field>Component_Version__c.Component__c</field>
            <operation>equals</operation>
            <valueField>$Source.Component__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Component_Version__c</referenceTo>
    <relationshipLabel>Defects Fixed</relationshipLabel>
    <relationshipName>Defect_Links3</relationshipName>
    <type>Lookup</type>
</CustomField>