force-app/main/default/objects/Defect_Link__c/fields/Version_Found__c.field-meta.xml
<CustomField>
    <fullName>Version_Found__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The the component version where the linked defect was found.</description>
    <inlineHelpText>The the component version where the linked defect was found.</inlineHelpText>
    <label>Version Found</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a Component Version for the Component listed on the Defect Link.</errorMessage>
        <filterItems>
            <field>Component_Version__c.Component__c</field>
            <operation>equals</operation>
            <valueField>$Source.Component__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Component_Version__c</referenceTo>
    <relationshipLabel>Defects Found</relationshipLabel>
    <relationshipName>Defect_Links2</relationshipName>
    <type>Lookup</type>
</CustomField>